[gd_scene load_steps=6 format=2]

[ext_resource path="res://audio/Denied.wav" type="AudioStream" id=2]
[ext_resource path="res://theme/BtnTemplate.gd" type="Script" id=3]
[ext_resource path="res://audio/click.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/Accept.wav" type="AudioStream" id=5]
[ext_resource path="res://theme/mainTheme.tres" type="Theme" id=6]

[node name="BtnTemplate" type="Button"]
anchor_right = 1.0
margin_bottom = 20.0
size_flags_horizontal = 4
theme = ExtResource( 6 )
script = ExtResource( 3 )

[node name="AudioAccept" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioDenied" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0

[connection signal="focus_entered" from="." to="." method="_on_Button_focus_entered"]
[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_BtnTemplate_pressed"]
